--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
       body{
         background: #eee;
       }
+      
+      svg{
+        align: center;
+      }
+      
     </style>
   </head>
   <body>
