--- a/index.html
+++ b/index.html
@@ -3,10 +3,62 @@
 
 <head>
   <title>Page title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+
   <style>
     body {
       background: #eee;
+      font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     }
+
+    .part1 {
+      background-color: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 30px;
+    }
+
+    .part2 {
+      background-color: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 30px;
+
+    }
+
+    .part3 {
+      background-color: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 30px;
+
+    }
+
+    .part4 {
+      background-color: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 30px;
+
+    }
+
+    .conclusion {
+      text-align: center;
+      background-color: #fff;
+      border-radius: 6px;
+      padding: 20px;
+      margin-bottom: 30px;
+
+    }
+
 
     svg {
       padding-left: 300px;
@@ -18,21 +70,114 @@
 
   <div class="container">
     <div class="row">
-      <div class="col m5 l4">
+      <div class="col l12">
+        <h2 style="text-align: center; color:rebeccapurple;">Varanasi Food walk</h2>
+      </div>
+    </div>
+  </div>
+  <div class="container part1">
+    <div class="row">
+      <div class="col m6 l6">
+
+        <img class="img-responsive" src="img/srivatsan-T5s48osIQTU-unsplash (1)-min.jpg"
+          style="width: 100%; max-height: 80%;" alt="">
         <span>Photo by <a
             href="https://unsplash.com/@srivatsan?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Srivatsan</a>
           on <a
             href="https://unsplash.com/s/photos/varanasi?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
       </div>
-      <div class="col m7 l8">
+      <div class="col m6 l6">
+        <h3 style="padding-bottom:10px; color:#DF9741;">About the Theme</h3>
+        <ul style="color: dimgrey;">
+          <li>Varanasi or Banaras, is a renowned toursist destination that attracts people from all over the world!</li>
+          <br>
+          <li>Situated on the banks of the holy river Ganga, the city is believed to be established by the Hindu lord
+            Shiva. </li> <br>
+          <li>Varanasi is all about ghats, chaos, food and its rich history!</li> <br>
+          <li>The amalgamation of its pulsating culture, the mesmerizing Ghats, the divine Temples, the lip-smacking
+            food, the busiest streets, the yogi babas and the calming Ganga Arti are sure to offer an uplifting
+            spiritual experience, by embracing everyone’s soul!</li> <br>
+          <li>Let’s explore what intriguing this city has to offer!</li> <br>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div class="container part2">
+    <div class="row">
+      <div class="coll12">
+        <h4 style="padding-bottom:10px; color:#DF9741;">Initial Ideas</h4>
+      </div>
+
+      <div class="coll4 ideation">
+        <h6 style="color:dimgray ; padding-top: 10px;">1. Exploring the Map like visualisation</h6>
+        <img src="img/Information Visualisation Notes-120 1.png"
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          alt="">
+        <h6 style="color:dimgray ;padding-top: 20px;;">2. Exploring Channels and Markers</h6>
+        <img
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          src="img/Information Visualisation Notes-127 1.png" style="width: 100%; height: 100%;" alt="">
 
       </div>
     </div>
   </div>
 
+  <div class="container part3">
+    <div class="row">
+      <div class="coll12">
+        <h4 style="padding-bottom:10px; color:#DF9741;">Low-Fidelitty Explorations</h4>
+      </div>
+
+      <div class="coll4 ideation">
+        <h6 style="color:dimgray ; padding-top: 10px;">1. Overview Explorations</h6>
+        <img src="img/Information Visualisation Notes-123.jpg"
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          alt="">
+        <h6 style="color:dimgray ;padding-top: 20px;;">2. Overview explorations after applying markers</h6>
+        <img
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          src="img/Information_Visualisation_Notes-124.jpg" style="width: 100%; height: 100%;" alt="">
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container part4">
+    <div class="row">
+      <div class="coll12">
+        <h4 style="padding-bottom:10px; color:#DF9741;">High-Fidelitty Explorations</h4>
+      </div>
+
+      <div class="coll4 ideation">
+        <h6 style="color:dimgray ; padding-top: 10px;">1. Exploring Icons for Food Items and Mode of Transportation</h6>
+        <img src="img/Icon Explorations@2x.png"
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          alt="">
+
+        <h6 style="color:dimgray ; padding-top: 10px;">2. Map Explorations without Markers</h6>
+        <img src="img/Actual Map View@2x.png"
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          alt="">
+        <h6 style="color:dimgray ;padding-top: 20px;;">3. Exploration in the Actual Map view with Markers</h6>
+        <img
+          style="width: 100%; height: 100%; border-style: solid; border-width: 2px; border-radius: 4px; border-color:rgba(112, 128, 144, 0.315); padding-bottom: 10px;"
+          src="img/Mapview paan 1@2x.png" style="width: 100%; height: 100%;" alt="">
 
 
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container conclusion">
+    <div class="row">
+      <div class="col l12">
+        <h5 style="color:dimgray ; padding-top: 10px;">Thank You! I will be happy to know your feedback :)</h5>
+      </div>
+    </div>
+  </div>
 
 </body>
 
